{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 16,
  "lineage": "a742ce14-8dc8-c9ea-4994-67507a3d6598",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254394382277:security-group/sg-090a4c26d19cb3508",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-090a4c26d19cb3508",
            "ingress": [],
            "name": "security group 1",
            "name_prefix": "",
            "owner_id": "254394382277",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb8da3f84ece39e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254394382277:security-group/sg-08cc45c5ef7c07a36",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08cc45c5ef7c07a36",
            "ingress": [],
            "name": "security group 2",
            "name_prefix": "",
            "owner_id": "254394382277",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb8da3f84ece39e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254394382277:security-group/sg-027eb5bcd4d46f2ed",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-027eb5bcd4d46f2ed",
            "ingress": [],
            "name": "security group 3",
            "name_prefix": "",
            "owner_id": "254394382277",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb8da3f84ece39e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-15863261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090a4c26d19cb3508",
            "self": false,
            "source_security_group_id": "sg-08cc45c5ef7c07a36",
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3441993544",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090a4c26d19cb3508",
            "self": false,
            "source_security_group_id": "sg-08cc45c5ef7c07a36",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3163725542",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cc45c5ef7c07a36",
            "self": false,
            "source_security_group_id": "sg-090a4c26d19cb3508",
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-139647722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cc45c5ef7c07a36",
            "self": false,
            "source_security_group_id": "sg-090a4c26d19cb3508",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3908473683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090a4c26d19cb3508",
            "self": false,
            "source_security_group_id": "sg-027eb5bcd4d46f2ed",
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-623655366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090a4c26d19cb3508",
            "self": false,
            "source_security_group_id": "sg-027eb5bcd4d46f2ed",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-2861922308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027eb5bcd4d46f2ed",
            "self": false,
            "source_security_group_id": "sg-090a4c26d19cb3508",
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1178623576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027eb5bcd4d46f2ed",
            "self": false,
            "source_security_group_id": "sg-090a4c26d19cb3508",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-4047847628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cc45c5ef7c07a36",
            "self": false,
            "source_security_group_id": "sg-027eb5bcd4d46f2ed",
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1166345408",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cc45c5ef7c07a36",
            "self": false,
            "source_security_group_id": "sg-027eb5bcd4d46f2ed",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-256260256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027eb5bcd4d46f2ed",
            "self": false,
            "source_security_group_id": "sg-08cc45c5ef7c07a36",
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3818069756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027eb5bcd4d46f2ed",
            "self": false,
            "source_security_group_id": "sg-08cc45c5ef7c07a36",
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    }
  ]
}